# ai-plays-pokemon

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  constants.py  docker-compose.yml  main.py  otel_config.py  pyproject.toml
agent/: app.py  base.py  conditions.py  decorators.py  enums.py  graph.py  schemas.py  state.py  utils.py
agent/actions/build_agent_state/: action.py  service.py
agent/actions/decision_maker_battle/: action.py  prompts.py  schemas.py  service.py
agent/actions/decision_maker_overworld/: action.py  prompts.py  schemas.py  service.py
agent/actions/decision_maker_text/: action.py  prompts.py  schemas.py  service.py
agent/actions/determine_handler/: action.py  service.py
agent/actions/generic_decision_maker/: action.py  prompts.py  schemas.py  service.py
agent/actions/handle_dialog_box/: action.py  service.py
agent/actions/handle_dialogue_box/: action.py  service.py
agent/actions/navigation/: node.py  service.py
agent/actions/press_random_button/: action.py
agent/actions/update_current_map/: action.py  service.py
agent/actions/update_goals/: action.py  prompts.py  schemas.py  service.py
agent/actions/update_onscreen_entities/: action.py  prompts.py  service.py
agent/nodes/build_agent_state/: node.py
agent/nodes/create_long_term_memory/: node.py  prompts.py  schemas.py  service.py
agent/nodes/critique/: node.py  prompts.py  service.py
agent/nodes/decision_maker_battle/: node.py  prompts.py  schemas.py  service.py
agent/nodes/decision_maker_overworld/: node.py  prompts.py  schemas.py  service.py
agent/nodes/decision_maker_text/: node.py  prompts.py  schemas.py  service.py
agent/nodes/dummy/: node.py
agent/nodes/handle_dialog_box/: node.py  service.py
agent/nodes/load_long_term_memory/: node.py  service.py
agent/nodes/navigation/: node.py  service.py
agent/nodes/prepare_agent_store/: node.py  service.py
agent/nodes/retrieve_long_term_memory/: node.py  prompts.py  service.py
agent/nodes/save_game_state/: node.py
agent/nodes/should_critique/: node.py  prompts.py  schemas.py  service.py
agent/nodes/should_retrieve_memory/: node.py  service.py
agent/nodes/update_agent_store/: node.py  service.py
agent/nodes/update_background_stream/: node.py
agent/nodes/update_current_map/: node.py  service.py
agent/nodes/update_goals/: node.py  prompts.py  schemas.py  service.py
agent/nodes/update_long_term_memory/: node.py  prompts.py  schemas.py  service.py
agent/nodes/update_onscreen_entities/: node.py  prompts.py  service.py
agent/nodes/update_summary_memory/: node.py  prompts.py  schemas.py  service.py
agent/subflows/battle_handler/: conditions.py  graph.py  schemas.py  state.py  subflow.py  utils.py
agent/subflows/battle_handler/nodes/determine_handler/: node.py  (+3 more)
agent/subflows/overworld_handler/: conditions.py  enums.py  graph.py  state.py  subflow.py
agent/subflows/text_handler/: conditions.py  enums.py  graph.py  state.py  subflow.py
backup/: service.py
common/: backup_service.py  constants.py  embedding_service.py  enums.py  exceptions.py  gemini.py  goals.py  llm_service.py  prompts.py  schemas.py  settings.py  types.py
common/tests/integration/: test_enums.py
database/: db_config.py  types.py
database/known_warp/: model.py  repository.py  schemas.py
database/llm_messages/: model.py  repository.py  schemas.py
database/long_term_memory/: model.py  repository.py  schemas.py
database/map_entity_memory/: model.py  repository.py  schemas.py
database/map_memory/: model.py  repository.py  schemas.py
database/sign_memory/: model.py  repository.py  schemas.py
database/sprite_memory/: model.py  repository.py  schemas.py
database/warp_memory/: model.py  repository.py  schemas.py
docs/: architecture.md  philosophy.md  workflow.md
emulator/: char_map.py  context.py  emulator.py  enums.py  game_state.py  schemas.py
emulator/parsers/: battle.py  inventory.py  map.py  player.py  pokemon.py  screen.py  sign.py  sprite.py  utils.py  warp.py
emulator/tests/integration/: test_game_state.py
jaeger/: config.yml
llm/: schemas.py  service.py
long_term_memory/: schemas.py  service.py
memory/: agent_memory.py  goals.py  long_term_memory.py  raw_memory.py  retrieval_service.py  summary_memory.py
overworld_map/: prompts.py  schemas.py  service.py
raw_memory/: schemas.py
scripts/: check_ruff_versions.py  check_streaming_background.py
streaming/: background.html  background_server.py  schemas.py  server.py
streaming/background/: index.html  script.js  style.css
streaming/tests/integration/: test_server.py
summary_memory/: schemas.py
tests/unit/: test_tests.py
visualization/: visualize.py
visualization/agent_graph/: Graph.dot  index.html  subflow_0fgtog1K9j5yWbqpK86Ji.dot  subflow_0u67pB4PA9Fmq7XnnHjGl.dot  subflow_0vqHqJJrPTGPMk0PhDn3t.dot  subflow_2ErnJHmCWvIhWhkdqXywR.dot  subflow_4SEY5zpaDNdypCujcSJwD.dot  subflow_5bjAebVecgmlNztV017W9.dot  subflow_5mg6yyNpUtR391mvWNyxP.dot  subflow_6QZh7blm460yYhOaKMRhC.dot  subflow_6SefxfRRuhdSvgmkq9leZ.dot  subflow_6qwj364HfjC5spLGTnv6T.dot  subflow_7Ux9TNOigXjiAkE2hIhMz.dot  subflow_7bd8LUxLfYsThf9OY8vBD.dot  subflow_8FrRI8S0ibkT8Vb9m2MzO.dot  subflow_9XyvxeUsc0ZX30lrRZmcK.dot  subflow_9kpsyC3tkFbxSsoilOoWq.dot  subflow_AP86GCGV3npDf4CHClXFg.dot  subflow_APVw3Xq7o2A7A7fzePfvY.dot  subflow_DepXAO7WYjhZ6pofijbXy.dot  subflow_DmIelVdepWjFgfe9NkQs7.dot  subflow_EAw4JRpwArz4VFq1rWFul.dot  subflow_EManaMiRqvjlgA1VDD2zj.dot  subflow_EnoZfjWTzGhaQ1UZ3SbOZ.dot  subflow_Epz87OOSMZk5Lg23pJEw4.dot  subflow_GRSKEcriui0RX5L0mzUCe.dot  subflow_H3qZniwiURNHNlWHXaovx.dot  subflow_HFVkTBDR4MALk7ails13Z.dot  subflow_HHzrxG5oVnulNBvUru88v.dot  subflow_HUZQmXyC3O2UpxJ2NxeOm.dot  subflow_I4h5AEdt51WQ33mjTY19v.dot  subflow_IM2bYZ8Egf0jU6WaHJeVQ.dot  subflow_ItVAAVQjdXa4xT3bO0S9v.dot  subflow_J3CLJU77ZvtxRdDi0QzxE.dot  subflow_JCWiGcm5Q0MBFyu3SqHFT.dot  subflow_KHuGZxU6hgQoJXTMV5ZJq.dot  subflow_LKEvNPOlhNB1wbMYFz6Nx.dot  subflow_LSmc0yVrpXN7IdWcqll93.dot  subflow_M7juKDQ2rDoxZlU8u8SCe.dot  subflow_OapdZq7B69Wz7WVm2Sgjl.dot  (+51 more)
(+84 files in other folders)
