[project]
name = "ai-plays-pokemon"
version = "0.1.0"
description = ""
authors = [{name = "Costa Lambrinoudis", email = "clambro.git@gmail.com"}]
license = { file = "LICENSE" }
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pyboy = {extras = ["pyboy-core"], version = "^2.5.2"}
numpy = "^2.2.5"
pillow = "^11.2.1"
pydantic = "^2.11.3"
loguru = "^0.7.3"
google-genai = "^1.13.0"
dotenv = "^0.9.9"
pydantic-settings = "^2.9.1"
aiofiles = "^24.1.0"
junjo = {extras = ["graphviz"], version = "^0.46.0"}
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"
tenacity = "^9.1.2"
aiohttp = "^3.12.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.12.0"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D205",  # 1 blank line required between summary line and description
    "D212",  # Multi-line docstring summary should start at the first line
    "D401",  # First line of docstring should be in imperative mood: "{first_line}"
    "INP001",  # File {filename} is part of an implicit namespace package. Add an __init__.py.
    "COM812",  # Enforce trailing commas (handled by the formatter).
    "EM101",  # Raw string in exception.
    "EM102",  # f-string in exception.
    "TRY003",  # Avoid specifying long messages outside the exception class
    "FIX002",  # Line contains TODO
    "TD002",   # Missing author in TODO `# TODO(<author_name>): ...`
    "TD003",   # Missing TODO link
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["validator"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Ignore unused imports in inits.
"test_*.py" = ["S101"]  # Ignore assert statements in tests
"conftest.py" = ["S101"]  # Ignore assert statements in conftest
"prompts.py" = ["E501"]  # Ignore line length in prompts

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
